# what-digital-task

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .flake8  Dockerfile  Dockerfile.dev  README.md  entrypoint.dev.sh  entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt  syntax_check.sh
backend/api/: admin.py  auth.py  models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: seed_products.py
backend/api/migrations/: 0001_initial.py  0002_product.py  0003_product_selected_by.py  0004_remove_product_selected_by_product_selected_by.py
backend/core/: logging_settings.py  settings.py  urls.py
frontend/: Dockerfile  Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Header.tsx  LoginContainer.tsx  ProductTable.tsx
frontend/src/contexts/: AuthContext.tsx  UserContext.tsx
frontend/src/utils/: auth.ts  config.ts
